# ay-player

./: CMakeLists.txt  main.c  music.c  player.h  pt3.c  pt3.h  sound.c
volutar/: pt3player.c  pt3player.h
